--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="media block-6 services d-flex align-items-center">
               <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-left">
                 <h3 class="heading">Friends and Family</h3>
-                <p> People facing depression typically tend to resort to their friends first when seeking assistance. Friends are people that they can trust and are comfortable with allowing for a safe environment. </p>
+                <p> People facing depression typically tend to resort to their friends first when seeking assistance. Friends are people that they can trust and are comfortable with allowing for a safe environment. Since all interactions are happening online, understanding your friend's mental health through interactions, so understanding their phrases and texts is the best way to understand their mental state.</p>
               </div>
             </div>
           </div>
@@ -107,7 +107,7 @@
             <div class="media block-6 services d-flex align-items-center">
               <div class="media-body pl-4">
                 <h3 class="heading">Early Detection</h3>
-                <p>It is very important that messages hinting at suicidal intentions are recognized right away. If noticed early, proper assistance can be provided in order to help those dealing with major depression.</p>
+                <p>It is very important that messages hinting at suicidal intentions are recognized right away. If noticed early, proper assistance can be provided in order to help those dealing with major depression. Especially due to COVID since hospitals and doctors are overloaded, people can't get the support that they need. Thus, having early detection online is the best way to help these people. </p>
               </div>
             </div>
           </div>
@@ -141,11 +141,11 @@
 		              </div>
 		            </div>
 		          </div>
-		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
+              <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		                <strong class="number" data-number="50">0</strong>
-		                <span>percent of Americans experiencing major depression receive treatment. </span>
+                    <strong class="number" data-number="35">0</strong>
+                    <span>percent increase in suicides during COVID-19.</span>
 		              </div>
 		            </div>
 		          </div>
@@ -170,7 +170,7 @@
     				<img src="images/therapist.jpg" class="img-fluid" alt="">
     				<div class="heading-section ftco-animate mt-5">
 	            <h2 class="mb-4">Our Process</h2>
-	            <p>We are a one stop shop for detecting suicidal and depressive tendencies and providing personalized support for those struggling with mental health. We are powered by AI/ML, NLP, and other algorithms to provide tailored diagnoses and support.</p>
+	            <p>We are a one stop shop for detecting suicidal and depressive tendencies and providing personalized support for those struggling with mental health, especially during the COVID-19 crisis. We are powered by AI/ML, NLP, and other algorithms to provide tailored diagnoses and support.</p>
 	          </div>
     			</div>
     			<div class="col-lg-6 py-5">
@@ -334,11 +334,11 @@
     						<div class="col-md-6">
     							<div class="card">
 						        <div class="card-header">
-										  <a class="card-link" data-toggle="collapse"  href="#menu4" aria-expanded="false" aria-controls="menu4">How do I use this site? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+										  <a class="card-link" data-toggle="collapse"  href="#menu4" aria-expanded="false" aria-controls="menu4">How does the COVID-19 relate to our website? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
 						        </div>
 						        <div id="menu4" class="collapse">
 						          <div class="card-body">
-												<p>In order to maximize the use of this site, you will first have to input the message that your friend sent to you, wheter it is a screenshot of your chat or just typing it out. Our NLP model will then analyze the message, telling you if it signals suicidal intentions. Based on your results, you can then check out the map embedded within our cite, and then search for a therapist nearby and sign up through a forum to get in contact with them. Additionally, therapists can use this as a tool to gain a better understanding of their patients.</p>
+												<p>COVID-19 has exacerbated an existing problem, and we don’t believe more people should be dying from suicides due to COVID-19 stress than COVID itself. From our algorithm to our pairing software, our application is built towards specifically dealing with suicidal tendencies due to COVID. We address specific reasons for accumulating stress during quarantine, use data specific top online communication, and more to make SuiSense as effective as possible during COVID-19.</p>
 						          </div>
 						        </div>
 						      </div>
