--- a/pairings.html
+++ b/pairings.html
@@ -257,6 +257,9 @@ display: center;
                                <input type="text" class="form-control" placeholder="Your Availability Hours (Dates/Times)">
                              </div>
                              <div class="form-group">
+                               <input type="text" class="form-control" placeholder="Address">
+                             </div>
+                             <div class="form-group">
                                <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Summary of your situation"></textarea>
                              </div>
                              <div class="form-group">
