--- a/analysis.html
+++ b/analysis.html
@@ -104,7 +104,7 @@
       </div>
     </div>
 <center>
-    <embed src="https://suisense.pythonanywhere.com/" style="width:1800px; height: 555px;">
+    <embed src="https://suisense.pythonanywhere.com/" style="width:100%; height:600px;”>
     </center>
   </section>
 
