--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@
       			<div class="heading-section heading-section-white ftco-animate">
       				<span class="subheading">SuiSense</span>
 	            <h2 style="font-size: 30px;">Using NLP to distinguish suicidal messages and provide personalized support.</h2>
+              <h2 style="font-size: 30px;">If you need urgent help, please call 1-800-273-8255.</h2>
 	          </div>
       		</div>
       		<div class="col-md-3 ftco-animate">
