--- a/analysis-progression-submission.html
+++ b/analysis-progression-submission.html
@@ -104,13 +104,9 @@
       </div>
     </div>
 <center>
-
-  <iframe src="https://suisense.pythonanywhere.com/" style="width:100%; height:600px;"></iframe>
-
+    <embed src="https://suisense.pythonanywhere.com/" style="width:100%; height:600px;”>
     </center>
   </section>
-
-
 
   <section class="ftco-section bg-white">
         <div class="container">
@@ -123,8 +119,144 @@
           </div>
         </div>
 
-  <iframe src="https://suisense.pythonanywhere.com/progression" style="width:100%; height:800px;"></iframe>
+        <style>
+        input[type="file"] {
+          display: none;
+      }
+      .custom-file-upload {
+          cursor: pointer;
+
+          background: #6a28ff;
+          border: 1px solid #6a28ff;
+          padding: 10px 24px;
+          color: #ffffff;
+          border-radius: 25px;
+      }
+
+      .custom-file-upload:hover {
+        color: #6a28ff;
+        background: #ffffff;
+      }
+      </style>
+
+  <center>
+
+      <br>
+      <br>
+
+
+        <div class="col-md-6 pr-md-5">
+          <form action="#">
+            <div class="form-group">
+              <select class="form-control">
+                <option value="volvo">*Biological sex status*</option>
+                <option value="volvo">Male</option>
+                <option value="saab">Female</option>
+                <option value="fiat">Transgender</option>
+                <option value="audi">Other</option>
+              </select>
+            </div>
+            <div class="form-group">
+            <select class="form-control">
+              <option value="volvo">*Racial Status*</option>
+              <option value="volvo">White</option>
+              <option value="saab">Black or African American</option>
+              <option value="fiat">American Indian or Alaska Native</option>
+              <option value="audi">East Asian</option>
+              <option value="audi">Indian or South Asian</option>
+              <option value="audi">Native Hawaiian or Other Pacific Islander</option>
+            </select>
+          </div>
+            <div class="form-group">
+              <select class="form-control">
+                <option value="volvo">*Sexuality Preference*</option>
+                <option value="volvo">Heterosexual</option>
+                <option value="saab">LGBTQ+</option>
+                <option value="fiat">Asexual</option>
+                <option value="audi">Other</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <select class="form-control">
+                <option value="volvo">*Employment status*</option>
+                <option value="volvo">Stable job</option>
+                <option value="saab">Tense work environment</option>
+                <option value="fiat">Nearly fired</option>
+                <option value="audi">Unemployed</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <select class="form-control">
+                <option value="volvo">*Affected by COVID-19 pandemic*</option>
+                <option value="volvo">Health problems</option>
+                <option value="saab">Unemployed</option>
+                <option value="fiat">Family problems</option>
+                <option value="audi">Other</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <textarea required name="" id="" cols="30" rows="7" class="form-control" placeholder="Additional information (our system will attempt to use this information in your analysis)"></textarea>
+            </div>
+
+<script>
+            function testSubmitFunction() {
+              var randomNumber = Math.floor(Math.random() * 5);
+
+              if (randomNumber == 0) {
+                document.getElementById("htmlRandomNumber").textContent = "You have been classified in Stage 1: Falling short of expectations";
+              } else if (randomNumber == 1) {
+                document.getElementById("htmlRandomNumber").textContent = "You have been classified in Stage 2: Attributions to self";
+              } else if (randomNumber == 2) {
+                document.getElementById("htmlRandomNumber").textContent = "You have been classified in Stage 3: High Self-Awareness and Self-Doubt.";
+              } else if (randomNumber == 3) {
+                document.getElementById("htmlRandomNumber").textContent = "You have been classified in Stage 4: Negative Affect";
+              } else if (randomNumber == 4) {
+                document.getElementById("htmlRandomNumber").textContent = "You have been classified in Stage 5: Cognitive Deconstruction";
+              } else {
+                document.getElementById("htmlRandomNumber").textContent = "You have been classified in Stage 6: Disinhibition";
+              }
+
+            document.getElementById("hometown").style.display = "block";
+          }
+
+        </script>
+
+<button class="btn btn-primary py-3 px-5" type="button" onClick="testSubmitFunction()">Submit Form</button>
+
+          </form>
+
+          <div id="hometown" style="display: none">
+            <br>
+            <div class="row justify-content-center mb-5">
+              <div class="col-md-7 text-center heading-section ftco-animate">
+                <h2 class="mb-4"> Analyze Your Specific Case</h2>
+                <hr>
+              </div>
+            </div>
+
+                              <p class="hometown" id="htmlRandomNumber"></p>
+                          </div>
+
+      </div>
+    </center>
+
+
   </section>
+
+<section>
+
+  <style>
+  .hometown {
+
+  text-align: center;
+  color: #000000;
+    background: #b1f587;
+  display: block;
+  }
+
+  </style>
+
+</section>
 
 <!-- TESSERACT INFO -->
 
