removed black line from embedded website

--- a/analysis.html
+++ b/analysis.html
@@ -91,13 +91,14 @@
     }
 </script>
 
+
   <section class="ftco-section">
     <div class="container">
       <div class="row justify-content-center mb-5">
         <div class="col-md-7 text-center heading-section ftco-animate">
           <center>
           <h2 class="mb-4">Classify Your Messages</h2>
-          <p>Please fill out the form below with text that you copied from a message or remembered hearing Use the upload button if you want to process a picture of a note or screenshot of a text conversation.</p>
+          <p>Please fill out the form below with text that you copied from a message or remembered hearing. Use the upload button if you want to process a picture of a note or screenshot of a text conversation.</p>
           <hr>
           </center>
         </div>
@@ -105,7 +106,11 @@
     </div>
 <center>
 
-  <iframe src="https://suisense.pythonanywhere.com/" style="width:100%; height:600px;"></iframe>
+<script>
+//frameBorder="0" style="width:100%; height:600px;"
+</script>
+
+  <iframe src="https://suisense.pythonanywhere.com/" width="100%" height="600" frameBorder="0"></iframe>
 
     </center>
   </section>
@@ -123,7 +128,7 @@
           </div>
         </div>
 
-  <iframe src="https://suisense.pythonanywhere.com/progression" style="width:100%; height:800px;"></iframe>
+  <iframe src="https://suisense.pythonanywhere.com/progression" width="100%" height="800" frameBorder="0"></iframe>
   </section>
 
 <!-- TESSERACT INFO -->
