--- a/analysis.html
+++ b/analysis.html
@@ -106,10 +106,6 @@
     </div>
 <center>
 
-<script>
-//frameBorder="0" style="width:100%; height:600px;"
-</script>
-
   <iframe src="https://suisense.pythonanywhere.com/" width="100%" height="600" frameBorder="0"></iframe>
 
     </center>
@@ -117,7 +113,7 @@
 
 
 
-  <section class="ftco-section bg-white">
+  <section>
         <div class="container">
           <div class="row justify-content-center mb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
