edited therapist page

--- a/pairings.html
+++ b/pairings.html
@@ -122,7 +122,7 @@ display: center;
   border-top: none;
 }
 </style>
-<section class="ftco-section bg-white">
+<!-- <section class="ftco-section bg-white">
   <div class="container">
     <div class="row justify-content-center mb-5">
       <div class="col-md-7 text-center heading-section ftco-animate">
@@ -347,7 +347,7 @@ display: center;
       background: #ffffff;
     }
     </style>
-
+ -->
 
 </section>
 
@@ -446,7 +446,7 @@ display: center;
 
 
 
-    <section class="ftco-section bg-white">
+    <!-- <section class="ftco-section bg-white">
     	<div class="container">
     		<div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
@@ -493,7 +493,7 @@ display: center;
                         </div>
 
                   </div>
-    </section>
+    </section> -->
 
 
   <!-- loader -->
