fixed footer, team section

--- a/index.html
+++ b/index.html
@@ -248,74 +248,70 @@
     	</div>
     </section>
 
-    <section>
-
-      <div class="row justify-content-center mb-5 pb-3">
-        <div class="col-md-7 text-center heading-section ftco-animate">
-<h2 class="mb-4">The Team</h2>
-        </div>
-      </div>
-
-
-      <div class="container">
-        <div class="row">
-          <div class="col-sm">
-            <div class="member" data-aos="fade-up">
-              <div class="pic"><img src="suiSenseTeam/ayaanpic.jpg" alt=""></div>
-              <h4>Ayaan Haque</h4>
-              <span>Backend, Fullstack</span>
-            </div>
-          </div>
-          <div class="col-sm">
-            <div class="member" data-aos="fade-up" data-aos-delay="200" justify-content-center text-center>
-              <div class="pic"><img src="suiSenseTeam/vijarjpic.png" alt=""></div>
-              <h4>Viraaj Reddi</h4>
-              <span>Frontend, Fullstack</span>
-            </div>
-          </div>
-          <div class="col-sm">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="pic"><img src="suiSenseTeam/adithyapic.png" alt=""></div>
-              <h5>Adithya Peruvemba</h5>
-              <span>Frontend, UI Developer</span>
-            </div>
-          </div>
-          <div class="col-sm">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="pic"><img src="suiSenseTeam/ishaanpic.jpg" class="img-circle" alt=""></div>
-              <h4>Ishaan Bhandari</h4>
-              <span>UI Developer</span>
-            </div>
-          </div>
-        </div>
-      </div>
-
-              </div>
-      </section
-
-    <section class="ftco-section testimony-section">
+    <div id="ftco-about">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 text-center heading-section ftco-animate">
-
+  <h2 class="mb-4">The Team</h2>
           </div>
         </div>
-        <div class="row ftco-animate">
-          <div class="col-md-12">
-            <div class="carousel-testimony owl-carousel ftco-owl">
-
-
-
-                </div>
-              </div>
+        <div class="row">
+          <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
+            <div class="ftco-staff">
+              <img src="images/team/ayaanpic.png" alt="Template">
+              <h3>Ayaan<br>Haque</h3>
+              <strong class="role">Fullstack, Backend</strong>
             </div>
+          </div>
+          <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
+            <div class="ftco-staff">
+              <img src="images/team/vijarjpic.png" alt="Template">
+              <h3>Viraaj<br>Reddi</h3>
+              <strong class="role">Fullstack, Backend</strong>
+
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
+            <div class="ftco-staff">
+              <img src="images/team/adithyapic.png" alt="Template">
+              <br>
+              <h3>Adithya<br>Peruvemba</h3>
+              <strong class="role">Frontend, UI Developer</strong>
+
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
+            <div class="ftco-staff">
+              <img src="images/team/ishaanpic.png" alt="Template">
+              <h3>Ishaan<br>Bhandari</h3>
+              <strong class="role">Frontend, UI Developer</strong>
+              <!--
+              <div class='testingDiv'>
+              <a href="https://www.facebook.com/ishaan.bhandari.50"><i class="icon-facebook"></i></a>
+              <a href="#https://github.com/ishaan-bhandari"><i class="icon-github"></i></a>
+              <a href="mailto: ishaanbhandari0@gmail.com"><i class="icon-inbox"></i></a>
+              <a href="#https://www.instagram.com/ishaan.bhandari/"><i class="icon-instagram"></i></a>
+            </div>
+          -->
+              </div>
 
 
 
+
+            </div>
           </div>
         </div>
       </div>
-    </section>
+      <br><br><br>
+    </div>
+
+<style>
+.testingDiv {
+    display: flex;
+    justify-content: space-around;
+    justify-content: space-between;
+}
+</style>
 
     <section class="ftco-section bg-light">
     	<div class="container">
@@ -385,6 +381,10 @@
       			<div class="heading-section heading-section-white ftco-animate">
       				<span class="subheading">SuiSense</span>
 	            <h2 style="font-size: 30px;">Using NLP to distinguish suicidal messages and provide personalized support.</h2>
+	          </div>
+      		</div>
+          <div class="col-md-6">
+      			<div class="heading-section heading-section-white ftco-animate">
               <h2 style="font-size: 30px;">If you need urgent help, please call 1-800-273-8255.</h2>
 	          </div>
       		</div>
@@ -418,7 +418,7 @@
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">Saratoga, California, USA</span></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">ayaanzhaque@gmail.com</span></a></li>
-                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">vishraj55@gmail.com</span></a></li>
+                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">viraajreddi@gmail.com</span></a></li>
                   <li><a href="#"><span class="icon icon-envelope"></span><span class="text">ishaanbhandari0@gmail.com</span></a></li>
                   <li><a href="#"><span class="icon icon-envelope"></span><span class="text">adithya.peruvemba@gmail.com</span></a></li>
 	              </ul>
