--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 		            	</div>
 		              <div class="mt-3 media-body media-body-2">
 		                <h3 class="heading">Primary Diagnosis</h3>
-		                <p>Using our basic NLP model, a friend can either input a screenshot or write out text, and will be able to see if their friend is suffering depression or is on the suicidal side. </p>
+		                <p>Using our basic NLP model, a friend can either input a screenshot or write out text, and will be able to see if their friend is suffering depression or is on the suicidal side.  </p>
 		              </div>
 		            </div>
     					</div>
@@ -215,7 +215,7 @@
 		            	</div>
 		              <div class="mt-3 media-body media-body-2">
 		                <h3 class="heading">Progression Model</h3>
-		                <p>The friend will then input more data and our progression model will be able to detect what stage of depression the person is in and what could be the cause of it.</p>
+		                <p>The friend will then input more data and our progression model will be able to detect what stage of depression the person is in and what could be the cause of it. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 		              </div>
 		            </div>
     					</div>
@@ -226,7 +226,7 @@
 		            	</div>
 		              <div class="mt-3 media-body media-body-2">
 		                <h3 class="heading">Locating Therapists</h3>
-		                <p>Once the proper diagnosis has been reached, our algorithms will be able to match a personalized therapist to the depressed friend.</p>
+		                <p>Once the proper diagnosis has been reached, our algorithms will be able to match a personalized therapist to the depressed friend.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 		              </div>
 		            </div>
     					</div>
@@ -238,7 +238,7 @@
                   </div>
                   <div class="mt-3 media-body media-body-2">
                     <h3 class="heading">Getting Support</h3>
-                    <p>The friend will then be able to visit the map embedded within the website to see local therapists and begin helping create a support system for the struggling person.</p>
+                    <p>The friend will be able to visit the map embedded within the website to see local therapists and create a support system for the struggling person.</p>
                   </div>
                 </div>
               </div>
