--- a/blog.html
+++ b/blog.html
@@ -61,10 +61,68 @@
         </div>
       </div>
     </div>
-    <!--Begin Website Toolbox Forum Embed Code-->
+    <!--Begin Website Toolbox Forum Embed Code
     <div id="wtEmbedCode"><script type="text/javascript" id="embedded_forum" iframe width=600 height=1000 src="https://adithyasp.discussion.community/js/mb/embed.js"></script>
     <noscript><a href="https://adithyasp.discussion.community/">Connect With Therapists!</a></noscript></div>
-    <!--End Website Toolbox Forum Embed Code-->
+    End Website Toolbox Forum Embed Code-->
+    <center>
+    <iframe src="https://suisense1.forumotion.com/" width = "100%" height="500px"> </iframe>
+</center>
+
+    <footer class="ftco-footer ftco-bg-dark ftco-section">
+      <div class="container">
+        <div class="row mb-5 pb-5 align-items-center d-flex">
+          <div class="col-md-6">
+            <div class="heading-section heading-section-white ftco-animate">
+              <span class="subheading">SuiSense</span>
+              <h2 style="font-size: 30px;">Using NLP to distinguish suicidal messages and provide personalized support.</h2>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="heading-section heading-section-white ftco-animate">
+              <h2 style="font-size: 30px;">If you need urgent help, please call 1-800-273-8255.</h2>
+            </div>
+          </div>
+          <div class="col-md-3 ftco-animate">
+            <p class="mb-0"><a href="#" class="btn btn-primary py-3 px-4">Get started now</a></p>
+          </div>
+        </div>
+        <div class="row mb-5">
+          <div class="col-md">
+            <div class="ftco-footer-widget mb-4 bg-primary p-4">
+              <h2 class="ftco-heading-2">SuiSense</h2>
+              <p>Utilizing AI to provide early detection of suicide to provide crucial support.</p>
+            </div>
+          </div>
+          <div class="col-md">
+             <div class="ftco-footer-widget mb-4">
+              <h2 class="ftco-heading-2">Navigational</h2>
+              <ul class="list-unstyled">
+                <li><a href="index.html" class="py-2 d-block">Home</a></li>
+                <li><a href="analysis.html" class="py-2 d-block">Analysis</a></li>
+                <li><a href="pairings.html" class="py-2 d-block">Pairings</a></li>
+                <li><a href="blog.html" class="py-2 d-block">Blog</a></li>
+                <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="ftco-footer-widget mb-4">
+              <h2 class="ftco-heading-2">Contact Us</h2>
+              <div class="block-23 mb-3">
+                <ul>
+                  <li><span class="icon icon-map-marker"></span><span class="text">Saratoga, California, USA</span></li>
+                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">ayaanzhaque@gmail.com</span></a></li>
+                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">viraajreddi@gmail.com</span></a></li>
+                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">ishaanbhandari0@gmail.com</span></a></li>
+                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">adithya.peruvemba@gmail.com</span></a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
 
