--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 		            	</div>
 		              <div class="mt-3 media-body media-body-2">
 		                <h3 class="heading">Primary Diagnosis</h3>
-		                <p>Using our basic NLP model, a friend can either input a screenshot or write out text, and will be able to see if their friend is suffering depression or is on the suicidal side.  </p>
+		                <p>Using our basic NLP model, a friend can paste or write out text, and will be able to see if their friend is suffering depression or is on the suicidal side.&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </p>
 		              </div>
 		            </div>
     					</div>
@@ -214,8 +214,8 @@
 		            		<span class="flaticon-cloud"></span>
 		            	</div>
 		              <div class="mt-3 media-body media-body-2">
-		                <h3 class="heading">Progression Model</h3>
-		                <p>The friend will then input more data and our progression model will be able to detect what stage of depression the person is in and what could be the cause of it. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+		                <h3 class="heading">Our Data</h3>
+		                <p> Our model is trained on data from the subreddits "Suicide" and "Depression" since more people are likely to open up on an anonymous platform like reddit.</p>
 		              </div>
 		            </div>
     					</div>
@@ -226,7 +226,7 @@
 		            	</div>
 		              <div class="mt-3 media-body media-body-2">
 		                <h3 class="heading">Locating Therapists</h3>
-		                <p>Once the proper diagnosis has been reached, our algorithms will be able to match a personalized therapist to the depressed friend.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+		                <p>The friend will be able to visit the map embedded within the website to see pairings with local therapists and create an effective support system for the struggling person. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 		              </div>
 		            </div>
     					</div>
@@ -238,7 +238,7 @@
                   </div>
                   <div class="mt-3 media-body media-body-2">
                     <h3 class="heading">Getting Support</h3>
-                    <p>The friend will be able to visit the map embedded within the website to see local therapists and create a support system for the struggling person.</p>
+                    <p>Friends and patients can consult qualified therapists on valuable questions they may not know the answer to through our forum feature. We hope to build an inclusive community where everyone can feel safe. </p>
                   </div>
                 </div>
               </div>
