--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 						        </div>
 						        <div id="menu3" class="collapse">
 						          <div class="card-body">
-												<p>This site is mainly meant for friends of those who are going through depression so they can accurately see specifically what their friend is dealing with. Additionally, therapists and doctors can also use our algorithm to better understand their patients especially when their phrases are hard to distinguish and cryptic.</p>
+												<p>This site is mainly meant for friends of those who are going through depression so they can accurately see specifically what their friend is dealing with. Additionally, therapists and doctors can also use our algorithm to better understand their patients especially when their phrases are hard to distinguish and cryptic. </p>
 						          </div>
 						        </div>
 						      </div>
@@ -352,11 +352,12 @@
     						<div class="col-md-6">
     							<div class="card">
 						        <div class="card-header">
-										  <a class="card-link" data-toggle="collapse"  href="#menu4" aria-expanded="false" aria-controls="menu4">How does the COVID-19 relate to our website? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+										  <a class="card-link" data-toggle="collapse"  href="#menu4" aria-expanded="false" aria-controls="menu4">How do I navigate through the site? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
 						        </div>
 						        <div id="menu4" class="collapse">
 						          <div class="card-body">
-												<p>COVID-19 has exacerbated an existing problem, and we don’t believe more people should be dying from suicides due to COVID-19 stress than COVID itself. From our algorithm to our pairing software, our application is built towards specifically dealing with suicidal tendencies due to COVID. We address specific reasons for accumulating stress during quarantine, use data specific top online communication, and more to make SuiSense as effective as possible during COVID-19.</p>
+												<p>To use this site, you either directly type in a post or message from your friend or upload a screenshot of it. You will then receive an accurate diagnosis on whether your friend is just suffering depression or if they are actually experiencing suicidal behavior. You will then go to the map and will be able to find local therapists near you.
+</p>
 						          </div>
 						        </div>
 						      </div>
