--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     	<div class="container">
     		<div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
-            <h2 class="mb-4">Frequently Asked Questions (FAQ)</h2>
+            <h2 class="mb-4">Frequently Asked Questions</h2>
           </div>
         </div>
     		<div class="row">
@@ -356,7 +356,7 @@
 						        </div>
 						        <div id="menu4" class="collapse">
 						          <div class="card-body">
-												<p>To use this site, you either directly type in a post or message from your friend or upload a screenshot of it. You will then receive an accurate diagnosis on whether your friend is just suffering depression or if they are actually experiencing suicidal behavior. You will then go to the map and will be able to find local therapists near you.
+												<p>To use this site, you either directly type in a post or message from your friend. You will then receive an prediction on whether your friend is just suffering depression or if they are actually experiencing suicidal behavior. You will then go to the map and will be able to find local therapists near you. For additional support, go to the forum to ask for help or support.
 </p>
 						          </div>
 						        </div>
