--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="analysis.html" class="nav-link">Analysis</a></li>
-	          <li class="nav-item"><a class="nav-link" href="pairings.html">Pairings</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Support</a></li>
+	          <li class="nav-item"><a href="analysis.html" class="nav-link">Diagnosis</a></li>
+	          <li class="nav-item"><a class="nav-link" href="pairings.html">Support</a></li>
+	          <li class="nav-item"><a href="blog.html" class="nav-link">Forum</a></li>
 	          <li class="nav-item cta"><a href="analysis.html" class="nav-link"><span>Get started</span></a></li>
 	        </ul>
 	      </div>
@@ -405,9 +405,9 @@
               <h2 class="ftco-heading-2">Navigational</h2>
               <ul class="list-unstyled">
                 <li><a href="index.html" class="py-2 d-block">Home</a></li>
-                <li><a href="analysis.html" class="py-2 d-block">Analysis</a></li>
-                <li><a href="pairings.html" class="py-2 d-block">Pairings</a></li>
-                <li><a href="blog.html" class="py-2 d-block">Blog</a></li>
+                <li><a href="analysis.html" class="py-2 d-block">Diagnosis</a></li>
+                <li><a href="pairings.html" class="py-2 d-block">Support</a></li>
+                <li><a href="blog.html" class="py-2 d-block">Forum</a></li>
                 <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
               </ul>
             </div>
