--- a/pairings.html
+++ b/pairings.html
@@ -40,9 +40,9 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="analysis.html" class="nav-link">Analysis</a></li>
-            <li class="nav-item active"><a class="nav-link" href="pairings.html">Pairings</a></li>
-            <li class="nav-item"><a href="blog.html" class="nav-link">Support</a></li>
+	          <li class="nav-item"><a href="analysis.html" class="nav-link">Diagnosis</a></li>
+	          <li class="nav-item active"><a class="nav-link" href="pairings.html">Support</a></li>
+	          <li class="nav-item"><a href="blog.html" class="nav-link">Forum</a></li>
             <li class="nav-item cta"><a href="analysis.html" class="nav-link"><span>Get started</span></a></li>
 	        </ul>
 	      </div>
@@ -55,12 +55,13 @@
       <div class="container">
         <div class="row no-gutters slider-text align-items-end justify-content-start">
           <div class="col-md-8 ftco-animate text-center text-md-left mb-5">
-          	<p class="breadcrumbs mb-0"><span class="mr-3"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Pairings</span></p>
-            <h1 class="mb-3 bread">Your Pairings</h1>
+          	<p class="breadcrumbs mb-0"><span class="mr-3"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Support</span></p>
+            <h1 class="mb-3 bread">Support</h1>
           </div>
         </div>
       </div>
     </div>
+
 
 
  <!-- copied code from python anywhere form -->
@@ -349,6 +350,8 @@ display: center;
     </style>
  -->
 
+
+
 </section>
 
     <section class="ftco-section bg-light">
@@ -494,6 +497,61 @@ display: center;
 
                   </div>
     </section> -->
+
+    <footer class="ftco-footer ftco-bg-dark ftco-section">
+      <div class="container">
+      	<div class="row mb-5 pb-5 align-items-center d-flex">
+      		<div class="col-md-6">
+      			<div class="heading-section heading-section-white ftco-animate">
+      				<span class="subheading">SuiSense</span>
+	            <h2 style="font-size: 30px;">Using NLP to distinguish suicidal messages and provide personalized support.</h2>
+	          </div>
+      		</div>
+          <div class="col-md-6">
+      			<div class="heading-section heading-section-white ftco-animate">
+              <h2 style="font-size: 30px;">If you need urgent help, please call 1-800-273-8255.</h2>
+	          </div>
+      		</div>
+      		<div class="col-md-3 ftco-animate">
+      			<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-4">Get started now</a></p>
+      		</div>
+      	</div>
+        <div class="row mb-5">
+          <div class="col-md">
+            <div class="ftco-footer-widget mb-4 bg-primary p-4">
+              <h2 class="ftco-heading-2">SuiSense</h2>
+              <p>Utilizing AI to provide early detection of suicide to provide crucial support.</p>
+            </div>
+          </div>
+          <div class="col-md">
+             <div class="ftco-footer-widget mb-4">
+              <h2 class="ftco-heading-2">Navigational</h2>
+              <ul class="list-unstyled">
+                <li><a href="index.html" class="py-2 d-block">Home</a></li>
+                <li><a href="analysis.html" class="py-2 d-block">Diagnosis</a></li>
+                <li><a href="pairings.html" class="py-2 d-block">Support</a></li>
+                <li><a href="blog.html" class="py-2 d-block">Forum</a></li>
+                <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="ftco-footer-widget mb-4">
+            	<h2 class="ftco-heading-2">Contact Us</h2>
+            	<div class="block-23 mb-3">
+	              <ul>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Saratoga, California, USA</span></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">ayaanzhaque@gmail.com</span></a></li>
+                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">viraajreddi@gmail.com</span></a></li>
+                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">ishaanbhandari0@gmail.com</span></a></li>
+                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">adithya.peruvemba@gmail.com</span></a></li>
+	              </ul>
+	            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
   <!-- loader -->
