updated background and slogan

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                       </div>
                       <center>
                                 <div class="col-md-7 ftco-animate">
-            <p>Using Natural Language Processing (NLP) to distinguish suicidal messages and provide personalized support.</p>
+            <p>Using Artifical Intelligence (AI) to distinguish suicidal messages.</p>
           </div>
         </center>
             <p><a href="analysis.html" class="btn btn-primary px-4 py-3">Get Started</a></p>
@@ -185,7 +185,7 @@
     	</div>
     </section>
 
-    <section class="ftco-section ftco-no-pt ftc-no-pb">
+    <section class="ftco-section ftco-no-pt ftc-no-pb bg-light">
     	<div class="container">
     		<div class="row">
     			<div class="col-lg-6 py-5">
