Added Location Based Map

--- a/pairings.html
+++ b/pairings.html
@@ -354,19 +354,23 @@ display: center;
 
 </section>
 
-    <section class="ftco-section bg-light">
-    	<div class="container">
-    		<div class="row justify-content-center mb-5 pb-3">
-          <div class="col-md-7 text-center heading-section ftco-animate">
-            <h2 class="mb-4">Your Map</h2>
-          </div>
-        </div>
+<section class="ftco-section bg-light">
+  <div class="container">
+    <div class="row justify-content-center mb-5 pb-3">
+      <div class="col-md-7 text-center heading-section ftco-animate">
+        <h2 class="mb-4">Your Map</h2>
+      </div>
+      <iframe
+  width="100%"
+  height="500px"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/search?key=AIzaSyAZ_CRTgudc3sczqvqniSz2AKpgk_kPmlk&q=therapists+near+me" allowfullscreen>
+</iframe>
+    </div>
+  </div>
+</section>
 
-        <div id="map"></div>
-        <script src="js/google-map.js"></script>
-        <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjWfWoYtAhvc6i9C4V5SekngUKeyXOYoc&callback=initMap">
-        </script>
+  
     <!-- ORIGINAL CODE FROM TEMPLATE MAY BE USEFUL LATER
     		<div class="row d-flex">
 	        <div class="col-lg-3 col-md-6 ftco-animate">
