our process fixed

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                       </div>
                       <center>
                                 <div class="col-md-7 ftco-animate">
-            <p>Using Artifical Intelligence (AI) to distinguish suicidal messages.</p>
+            <p>Using Artifical Intelligence to distinguish between suicidal and depressive messages</p>
           </div>
         </center>
             <p><a href="analysis.html" class="btn btn-primary px-4 py-3">Get Started</a></p>
@@ -141,7 +141,7 @@
     	<div class="container">
     		<div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
-            <span class="subheading">Staggering Suicide and Depression Statistics</span>
+            <span class="subheading">Suicide and Depression Statistics</span>
           </div>
         </div>
     		<div class="row justify-content-center">
@@ -192,7 +192,7 @@
     				<img src="images/therapist.jpg" class="img-fluid" alt="">
     				<div class="heading-section ftco-animate mt-5">
 	            <h2 class="mb-4">Our Process</h2>
-	            <p>We are a one stop shop for detecting suicidal and depressive tendencies and providing personalized support for those struggling with mental health, especially during the COVID-19 crisis. We are powered by AI/ML, NLP, and other algorithms to provide tailored diagnoses and support.</p>
+	            <p>We are a one stop shop for detecting suicidal and depressive tendencies and providing personalized support for those struggling with mental health. We are powered by AI/ML, NLP, and other algorithms to provide tailored diagnoses and support.</p>
 	          </div>
     			</div>
     			<div class="col-lg-6 py-5">
@@ -252,7 +252,10 @@
       <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 text-center heading-section ftco-animate">
-  <h2 class="mb-4">The Team</h2>
+              <p></p>
+              <p></p>
+              <p></p>
+              <h2 class="mb-4">The Team</h2>
           </div>
         </div>
         <div class="row">
@@ -356,7 +359,7 @@
 						        </div>
 						        <div id="menu4" class="collapse">
 						          <div class="card-body">
-												<p>To use this site, you either directly type in a post or message from your friend. You will then receive an prediction on whether your friend is just suffering depression or if they are actually experiencing suicidal behavior. You will then go to the map and will be able to find local therapists near you. For additional support, go to the forum to ask for help or support.
+												<p>To use this site, you either directly type in a post or message from your friend. You will then receive an prediction on whether your friend is just suffering from depression or if they are suicidal. You will then go to the map and will be able to find local therapists near you. For additional support, go to the forum to ask for help or support.
 </p>
 						          </div>
 						        </div>
