--- a/analysis.html
+++ b/analysis.html
@@ -98,7 +98,7 @@
         <div class="col-md-7 text-center heading-section ftco-animate">
           <center>
           <h2 class="mb-4">Classify Your Messages</h2>
-          <p>Please fill out the form below with text that you copied from a message or remembered hearing. Use the upload button if you want to process a picture of a note or screenshot of a text conversation.</p>
+          <p>Please fill out the form below with text that you copied from a message or remembered hearing. Make sure the text is over 70 words, or you will get an inaccurate result.</p>
           <hr>
           </center>
         </div>
