--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
           <div class="col-md-6 d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services d-flex align-items-center">
               <div class="media-body pl-4">
-                <h3 class="heading">Causes</h3>
-                <p class="mb-0">Those that consider suicide likely experience a deep feeling of hopelessness. This feeling of hopelessness develops from the from the lack of interaction with others due to the arrival of COVID. Depression, the root of suicide, is widely considered to be a key risk factor. However, there is a clear distinction between the two and how they are treated. Those who struggle often open up to their friends over text and send messages; however, these friends are often in the dark in terms of trying to understand their friend's mental state.</p>
+                <h3 class="heading">Depression vs Suicide</h3>
+                <p class="mb-0">Depression and suicide might seem similar, but they have very specific differences that have big implications on how to support and treat a patient. Depression, the root of suicide, is widely considered to be a key risk factor. Suicide is much more severe, and a lot more support is needed to treat a patient. Those who struggle often open up to their friends over text and send messages; however, these friends are often in the dark in terms of trying to understand their friend's mental state.</p>
               </div>
             </div>
           </div>
