--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
           <div class="col-md-6 d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services d-flex align-items-center">
               <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-left">
-                <h3 class="heading">The Problem</h3>
-                <p class="mb-0">While our team has adjusted well to the shift into the COVID lifestyle, those suffering from mental instability have struggled. With the insurmountable stress accumulating from quarantine, which can come from being laid off or dealing with an abusive family, people are simply not happy at home. We realized that the effects of COVID have taken a serious toll on people across the world, and could potentially create extreme mental health problems for many.
+                <h3 class="heading">The Importance</h3>
+                <p class="mb-0">In an age with more communication happening through an online medium, it is increasingly hard to decipher people’s emotions especially with respect to damaging mental health effects like depression and suicide. Especially in the wake of COVID, mental health has taken a serious toll on people across the world.With the insurmountable stress accumulating from quarantine, which can come from being laid off or dealing with an abusive family, more people are struggling than ever before.
 
               </div>
             </div>
