spelt artificial wrong LMAO

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                       </div>
                       <center>
                                 <div class="col-md-7 ftco-animate">
-            <p>Using Artifical Intelligence to distinguish between suicidal and depressive messages</p>
+            <p>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
           </div>
         </center>
             <p><a href="analysis.html" class="btn btn-primary px-4 py-3">Get Started</a></p>
